fix: wcag contrast fix

--- a/apps/platform-app/src/components/hunter-landing/HunterTeam/TeamMemberCard.module.scss
+++ b/apps/platform-app/src/components/hunter-landing/HunterTeam/TeamMemberCard.module.scss
@@ -67,7 +67,7 @@
 }
 
 .availabilityInfo {
-  color: #00a700;
+  color: #0b650b;
   text-align: center;
   font-size: 12px;
   font-style: normal;
@@ -76,7 +76,7 @@
 }
 
 .unavailabilityInfo {
-  color: #df1f1f;
+  color: #ab1919;
   text-align: center;
   font-size: 12px;
   font-style: normal;
